<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="actors">Actors: </string>
    <string name="add_series">Add series</string>
    <string name="air_time">Air time: </string>
    <string name="air_day">Air day: </string>
    <string name="app_name">aweseries</string>
    <string name="back">Back</string>
    <string name="directed_by">Directed by: </string>
    <string name="director">Director: </string>
    <string formatted="false" name="do_you_want_to_stop_following">"Do you want to stop following %s?"</string>
    <string name="episode_overview">Overview:</string>
    <string formatted="false" name="episode_number_format">Episode %02d</string>
    <string formatted="false" name="episode_number_format_short">E%02d</string>
    <string name="first_aired">First aired: </string>
    <string name="follow">Follow</string>
    <string name="genre">Genre: </string>
    <string name="guest_stars">Guest stars:</string>
    <string name="large_widget_name">AweSeries (4x4)</string>
    <string name="last_episode_aired">last aired:</string>
    <string name="listing_title">Listing title</string>
    <string name="loading">Loading...</string>
    <string name="loading_dialog_text">Downloading...</string>
    <string name="med_widget_name">AweSeries (4x2)</string>
    <string formatted="false" name="runtime_minutes_format">%s minutes</string>
    <string name="my_series">My Series</string>
    <string name="network">Network: </string>
    <string name="next_episode_to_air">Next to air: </string>
    <string name="next_episode_to_see">Next to see: </string>
    <string name="no">No</string>
    <string name="no_episode_aired">no episode aired</string>
    <string name="no_episodes">no episode aired</string>
    <string name="no_items_to_list">No items to list</string>
    <string name="no_results_found_for_criteria">No results found for criteria</string>
    <string name="no_series_followed">No series followed</string>
    <string formatted="false" name="now_you_follow_series">Now you follow %s.</string>
    <string name="overview">Overview</string>
    <string name="review_not_available">Review not available</string>
    <string name="recent_episodes">Recent episodes</string>
    <string name="runtime">Runtime: </string>
    <string name="seasons">Seasons</string>
    <string formatted="false" name="season_and_episode_format">Season %02d - Episode %02d</string>
    <string formatted="false" name="season_and_episode_format_short">S%02dE%02d</string>
    <string formatted="false" name="season_number_format">Season %02d</string>
    <string formatted="false" name="season_number_format_short">S%02d</string>
    <string formatted="false" name="seasons_of_series">%s\'s Seasons</string>
    <string name="season_name">Season name</string>
    <string name="separator"> - </string>
    <string formatted="false" name="series_will_be_added">The Series %s will be added to your list soon.</string>
    <string formatted="false" name="series_will_be_removed">The Series %s will be removed from your list soon.</string>
    <string name="small_widget_name">AweSeries (4x1)</string>
    <string name="special_episodes">Special Episodes</string>
    <string name="status">Status: </string>
    <string name="stop_following">Stop following</string>
    <string name="unknown_series">Unknown Series</string>
    <string name="unnamed_episode">Unnamed Episode</string>
    <string name="updating_series_notification_title">AweSeries data update</string>
    <string name="updating_series_failure_notification_title">AweSeries data update failure</string>
    <string name="update_failure_notification_message">Data update has failed. Please check your Internet connection or try again later.</string>
    <string name="updating_series_data">Updating series data...</string>
    <string name="up_to_date">up to date</string>
    <string name="update">Update</string>
    <string name="upcoming_episodes">Upcoming episodes</string>
    <string name="writer">Writer: </string>
    <string name="yes">Yes</string>
    <string name="you_no_longer_follow">You no longer follow %s.</string>
    <string name="invalid_search_criteria">Invalid search criteria.</string>
    <string name="connection_failed_message">Connection failed. Please check your connection.</string>
    <string name="parsing_failed">Parsing failed.</string>
    <string name="date_format_short">yyyy-MM-dd</string>

</resources>