<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@drawable/fastscroll_thumb_holo"
    android:scrollbarTrackVertical="@drawable/fastscroll_track_holo_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/episodeFirstAiredImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_calendar"/>

            <TextView
                android:id="@+id/episodeFirstAiredTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myseries_style.12sp"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/clapperboard"
                android:visibility="visible"/>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp">

            <CheckBox
                android:id="@+id/isEpisodeViewedCheckBox"
                android:button="@drawable/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"/>

            <TextView
                android:id="@+id/episodeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </LinearLayout>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/episodeGuestStarsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guest_stars"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/episodeGuestStarsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myseries_style.12sp"/>

        </LinearLayout>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/episodeWritersLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/episodeWritersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myseries_style.12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/episodeDirectorsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/episodeDirectorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myseries_style.12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/episodeOverviewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/episodeOverviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myseries_style.12sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>